Fix #997 - Truncate long email on glocal menu (#1003)
* Fix #997 - Truncate long email on glocal menu

* Changed Protocol token to Magic Number

* Use Protocol tokens

--- a/static/scss/partials/glocal-menu.scss
+++ b/static/scss/partials/glocal-menu.scss
@@ -17,9 +17,17 @@ glocal-menu {
   position: absolute;
   visibility: hidden;
   color: #000000;
-  right: 28px;
+  right: $spacing-lg;
   border-radius: 8px;
   box-shadow: 0 7px 12px -3px rgba(28, 28, 29, .502);
+  width: auto;
+  max-width: calc(#{$screen-sm} - #{$spacing-lg});
+
+    @media screen and (max-width: $screen-sm) {
+      max-width: calc(#{$screen-sm} - #{$spacing-md} - #{$spacing-md});
+      left: $spacing-md;
+      right: $spacing-md;
+    }
 }
 
 .glocal-menu-wrapper.fx-bento-fade-out {
@@ -65,7 +73,6 @@ glocal-menu {
   height: var(--glocalSmallAvatarDimensions);
   width: var(--glocalSmallAvatarDimensions);
   border-radius: 50%;
-  margin: var(--glocalIconMargin);
 }
 
 .avatar {
@@ -84,6 +91,9 @@ glocal-menu {
 .glocal-account-info {
   display: flex;
   flex-direction: column;
+  padding: 0 $spacing-sm;
+  word-wrap: break-word;
+  width: 100%;
 }
 
 .glocal-fxa-email {
